src/css/styles.css
li#stateToggle[state="play"] {
    class: "icon-play btn"
}

li#stateToggle[state="pause"] {
    background-image: url(../images/media-play.svg);
}

@-webkit-keyframes playing {
    0% {
        width: 0%;
    }

    100% {
        width: 100%;
    }
}

@-moz-keyframes playing {
    0% {
        width: 0%;
    }

    100% {
        width: 100%;
    }
}

@-o-keyframes playing {
    0% {
        width: 0%;
    }

    100% {
        width: 100%;
    }
}

@keyframes playing {
    0% {
        width: 0%;
    }

    100% {
        width: 100%;
    }
}

* {
    box-sizing: border-box;
}

body {
    background-color: #f6fafb;
    font-size: 12px;
}

.container {
    width: 26em;
    margin: auto;
    display: block;
    margin-top: 1em;
}

#player {
    background-color: #ecf0f1;
    display: block;
    overflow: hidden;
    padding: 0 0 1em 0;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    -ms-border-radius: 5px;
    -o-border-radius: 5px;
    border-radius: 5px;
    -webkit-box-shadow: #d8dcdd 0 5px 10px;
    -moz-box-shadow: #d8dcdd 0 5px 10px;
    box-shadow: #d8dcdd 0 5px 10px;
}

.info {
    padding: 1em;
    position: relative;
    font-family: "Merriweather Sans";
    color: #8b9195;
}

/*.controls {*/
/*    padding: 1em;*/
/*}*/

.controls ul li {
    display: inline-block;
    margin-right: 0.17em;
    padding: 1.1em;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
    border-radius: 50%;
    background-image: -webkit-gradient(
            linear,
            50% 0%,
            50% 100%,
            color-stop(0%, #7f8c8d),
            color-stop(100%, #95a5a6)
    );
    background-image: -webkit-linear-gradient(top, #7f8c8d, #95a5a6);
    background-image: -moz-linear-gradient(top, #7f8c8d, #95a5a6);
    background-image: -o-linear-gradient(top, #7f8c8d, #95a5a6);
    background-image: linear-gradient(top, #7f8c8d, #95a5a6);
    text-align: center;
    -webkit-transition-property: all;
    -moz-transition-property: all;
    -o-transition-property: all;
    transition-property: all;
    -webkit-transition-duration: 0.2s;
    -moz-transition-duration: 0.2s;
    -o-transition-duration: 0.2s;
    transition-duration: 0.2s;
    -webkit-transition-timing-function: ease-in;
    -moz-transition-timing-function: ease-in;
    -o-transition-timing-function: ease-in;
    transition-timing-function: ease-in;
}
.controls ul li:hover {
    cursor: pointer;
    background-image: -webkit-gradient(
            linear,
            50% 0%,
            50% 100%,
            color-stop(0%, #1abc9c),
            color-stop(100%, #16a085)
    );
    background-image: -webkit-linear-gradient(top, #1abc9c, #16a085);
    background-image: -moz-linear-gradient(top, #1abc9c, #16a085);
    background-image: -o-linear-gradient(top, #1abc9c, #16a085);
    background-image: linear-gradient(top, #1abc9c, #16a085);
}

.play {
    padding: 1.6em !important;
}

h2 {
    font-size: 1.6em;
    margin-bottom: 0.2em;
    text-shadow: white 1px 1px 0;
    font-weight: 700;
    text-align: center;
}

h3 {
    font-size: 1.2em;
    font-weight: 400;
    color: #a9afb3;
    text-align: center;
}

.elapsed {
    margin-bottom: 1em;
    font-size: 0.8em;
    color: #c2c8cc;
}

.btn {
    font-size: 1.3em;
    color: #ecf0f1;
}

.more {
    background-color: #1abc9c;
    padding: 1em;
    position: absolute;
    top: 0;
    right: 0;
    z-index: 999;
    color: white;
    -moz-border-radius-topright: 5px;
    -webkit-border-top-right-radius: 5px;
    border-top-right-radius: 5px;
    -moz-border-radius-bottomright: 5px;
    -webkit-border-bottom-right-radius: 5px;
    border-bottom-right-radius: 5px;
    -moz-border-radius-bottomleft: 5px;
    -webkit-border-bottom-left-radius: 5px;
    border-bottom-left-radius: 5px;
}
.more:hover + .bio {
    width: 100%;
    height: 100%;
    padding: 1.5em;
}

.bio {
    position: absolute;
    top: 0;
    right: 0;
    width: 0;
    height: 0%;
    background-color: #1abc9c;
    overflow: hidden;
    color: white;
    font-family: "Roboto";
    font-weight: 100;
    font-size: 0.8em;
    line-height: 1.5em;
    text-align: center;
    -moz-border-radius-topright: 5px;
    -webkit-border-top-right-radius: 5px;
    border-top-right-radius: 5px;
    -webkit-transition-property: all;
    -moz-transition-property: all;
    -o-transition-property: all;
    transition-property: all;
    -webkit-transition-duration: 0.2s;
    -moz-transition-duration: 0.2s;
    -o-transition-duration: 0.2s;
    transition-duration: 0.2s;
    -webkit-transition-timing-function: ease-in;
    -moz-transition-timing-function: ease-in;
    -o-transition-timing-function: ease-in;
    transition-timing-function: ease-in;
}
.bio h2 {
    font-family: "Roboto";
    text-shadow: none;
    font-weight: 400;
    margin-bottom: 0.5em;
}

#language-div {
     display: inline-block;
     float: left;
}

#sentences-div {
    display: inline-block;
    float: right;
}

#sources-checkboxes {
    display: inline-block;
    float: left;
}

#topics-checkboxes {
    display: inline-block;
    float: right;
}

